# mnist-mlp-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: Activation.h  Dense.h  Matrix.h  MlpNetwork.h
src/: Activation.cpp  Dense.cpp  Matrix.cpp  MlpNetwork.cpp  main.cpp
tools/: plot_img.py
